--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,55 +1,87 @@
-<div class="container">
-  <p align="center">Angular 2 Operation</p>
-  <div class="row">
-    <h6>ADD EMPLOYEE</h6>
-   <table class="table table-borderless">
-      <tr>
-        <td><label for="id">Id</label></td>
-      <td><input type="number" id="id" placeholder="Enter Id:" name="id"  [(ngModel)]="id" ></td>
-      </tr>
-      
-      <tr>
-        <td><label for="name">Name</label></td>
-      <td><input type="text" id="" placeholder="Enter Name:" name="name"  [(ngModel)]="name"></td>
-      </tr>
-     
-      <tr><td><label for="salary">Salary</label></td>
-      <td><input type="number" id="salary" placeholder="Enter Salary:" name="salary"  [(ngModel)]="salary"></td></tr>
-       <tr><td> <label for="dep">Department</label></td>
-     <td> <input type="text" id="dep" placeholder="Enter Department:" name="dep"  [(ngModel)]="dep"> </td></tr>
+<!--<br>
+   <div class="container-fluid">
+      <form class="form-inline" #prodForm="ngForm" (ngSubmit)="saveForm(prodForm)"  novalidate>  
+        
+        <div class="form-group">
+         <label for="prodId">Product Id</label>
+        <input type="number" class="form-control" name="prodId" [(ngModel)]="model.prodId" #prodId="ngModel" [ngClass]="{ 'is-invalid': prodId.invalid }" required>
+        </div>
+
+       <div class="form-group">
+        <label for="prodId">Product Name</label>
+        <input type="number" class="form-control" name="prodId" [(ngModel)]="model.prodId" #prodId="ngModel" [ngClass]="{ 'is-invalid': prodId.invalid }" required>
+        </div>  
+                
     
-    <tr><td> <button type="submit" class="btn btn-primary" (click)="add()">Add Employee</button></td></tr>
-  </table>
-  </div>
- </div>
-    <div class="container">
-        <h6>SHOW All EMPLOYEE</h6>
-             <table class="table table-bordered">
-               <tr ><th>ID</th><th>Name</th><th>Salary</th><th>Department</th><th colspan="2" class="text-center">Action</th></tr>
-              <tr *ngFor="let emp of employee"><td>{{emp.id}}</td><td>{{emp.name}}</td><td>{{emp.salary}}</td><td>{{emp.dep}}</td><td><input type="submit" class="btn btn-primary" name="update" value="Update" (click)="update(e.id,e.name,e.salary,e.dep)"></td><td><input type="submit" class="btn btn-primary" name="delete" value="Delete" (click)="delete(emp.id)"></td></tr>
-              </table>
-              <p *ngIf="flag==true">Data Deleted</p>
-       </div>
-<div class="container">
-  <div class="row">
-    <h6>UPDATE EMPLOYEE</h6>
+  </form>
+ </div>-->
+ <div class="container">
+   <div class="row"><p>{{prodForm.value | json}}</p>
+    <form #prodForm="ngForm" (ngSubmit)="saveForm(prodForm)" novalidate>
    <table class="table table-borderless">
+     <div class="form-group">
       <tr>
-        <td><label for="id">Id</label></td>
-      <td><input type="number" id="id" placeholder="Enter Id:" name="id"  [(ngModel)]="newid" ></td>
-      </tr>
-      
-      <tr>
-        <td><label for="name">Name</label></td>
-      <td><input type="text" id="name" placeholder="Enter Name:" name="name"  [(ngModel)]="newname"></td>
-      </tr>
-     
-      <tr><td><label for="salary">Salary</label></td>
-      <td><input type="number" id="salary" placeholder="Enter Salary:" name="salary"  [(ngModel)]="newsalary"></td></tr>
-       <tr><td> <label for="dep">Department</label></td>
-     <td> <input type="text" id="dep" placeholder="Enter Department:" name="dep"  [(ngModel)]="newdep"> </td></tr>
+        <td><label for="pid">Product Id</label></td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      <td><input type="number" id="pid" name="pid" class="form-control" [(ngModel)]="pid" ngModel></td>
+      </tr></div>
+
+      <div class="form-group"><tr>
+        <td><label for="pname">Product Name</label></td>
+      <td><input type="text" name="pname" id="pname" class="form-control is-invalid"[class.is-invalid]="pname.invalid" required="required" ngModel></td>
+      </tr></div>
+
+      <div class="form-group"><tr>
+        <td><label for="cost">Product Cost</label></td>&nbsp;&nbsp;
+      <td><input type="number" name="cost" id="cost" class="form-control" ngModel></td>
+      </tr></div>
+
+      <div class="form-group form-row"><tr><td>
+        <label>Product Online</label></td>
+        <td><div class="form-check-inline">
+             <input type="radio" name="prodonline" class="form-check-input" value="Yes" ngModel/>
+             <label class="form-check-label">Yes</label>
+             </div>
+            <div class="form-check-inline">
+             <input type="radio" name="prodonline" class="form-check-input" value="No" ngModel/>
+             <label class="form-check-label">No</label>
+             </div></td></tr>
+      </div>
+
+      <div class="form-group"><tr><td>
+        <label for="prodCategory">Product Category</label></td>
+        <td><select name="category" class="form-control" id="prodCategory" ngModel>
+          <option>Select Category</option>
+          <option *ngFor="let c of category">{{c}}</option></select></td></tr>
+      </div>
+
+      <div class="form-group form-row"><tr><td>
+        <label for="store">Available in Store</label></td>
+        <td><div class="form-check-inline">
+             <input type="checkbox" name="store" class="form-check-input" value="Big Bazar" ngModel/>
+             <label class="form-check-label">Big Bazar</label>
+             </div>
+            <div class="form-check-inline">
+             <input type="checkbox" name="store" class="form-check-input" value="" ngModel/>
+             <label class="form-check-label">DMart</label>
+        </div>
+          <div class="form-check-inline">
+             <input type="checkbox" name="store" class="form-check-input" value="" ngModel/>
+             <label class="form-check-label">Reliance</label>
+        </div>
+          <div class="form-check-inline">
+             <input type="checkbox" name="store" class="form-check-input" value="" ngModel/>
+             <label class="form-check-label">Mega Store</label>
+        </div>
+        </td></tr>
+      </div>
+      <tr><td><button type="submit" class="btn btn-primary">Add Employee</button></td></tr>
     
-    <tr><td> <button type="submit" class="btn btn-primary" (click)="updateValues(newid,newname,newsalary,newdep)">Sumbit</button></td></tr>
   </table>
-  </div>
+  </form>
+  
+   </div>
  </div>
+  
+  
+ 
+ 
