--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,48 +15,57 @@
     
   </form>
  </div>-->
- <div class="container">
-   <div class="row"><p>{{prodForm.value | json}}</p>
-    <form #prodForm="ngForm" (ngSubmit)="saveForm(prodForm)" novalidate>
-   <table class="table table-borderless">
+ 
+    <form #prodForm="ngForm" (ngSubmit)="saveForm(prodForm)">
+     <table class="table table-borderless">
      <div class="form-group">
       <tr>
-        <td><label for="pid">Product Id</label></td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-      <td><input type="number" id="pid" name="pid" class="form-control" [(ngModel)]="pid" ngModel></td>
-      </tr></div>
+        <td><label for="pid">Product Id</label></td>&nbsp;&nbsp;&nbsp;
+      <td> <div class="col"><input type="number" id="pid" name="pid" #pid="ngModel" class="form-control" ngModel required>
+      <span class="alert alert-danger" *ngIf="pid.touched && !pid.valid">This field is required</span></div>
+      </td>
+      </tr>
+     </div>
 
       <div class="form-group"><tr>
         <td><label for="pname">Product Name</label></td>
-      <td><input type="text" name="pname" id="pname" class="form-control is-invalid"[class.is-invalid]="pname.invalid" required="required" ngModel></td>
+      <td><input type="text" name="pname" id="pname" #pname="ngModel" class="form-control"
+        required ngModel>
+      <span class="alert alert-danger" *ngIf="pname.touched && !pname.valid">This field is required</span></td>
       </tr></div>
 
       <div class="form-group"><tr>
         <td><label for="cost">Product Cost</label></td>&nbsp;&nbsp;
-      <td><input type="number" name="cost" id="cost" class="form-control" ngModel></td>
+      <td><input type="number" name="cost" #cost="ngModel" id="cost" class="form-control" required ngModel>
+       <span class="alert alert-danger" *ngIf="cost.touched && !cost.valid">This field is required</span></td>
       </tr></div>
 
       <div class="form-group form-row"><tr><td>
-        <label>Product Online</label></td>
+        <label for="prodonline">Product Online</label></td>
         <td><div class="form-check-inline">
-             <input type="radio" name="prodonline" class="form-check-input" value="Yes" ngModel/>
+             <input type="radio" id="prodonline" name="prodonline" class="form-check-input" value="Yes" required ngModel/>
              <label class="form-check-label">Yes</label>
              </div>
             <div class="form-check-inline">
-             <input type="radio" name="prodonline" class="form-check-input" value="No" ngModel/>
+             <input type="radio" id="prodonline" name="prodonline" class="form-check-input" value="No" required ngModel/>
              <label class="form-check-label">No</label>
-             </div></td></tr>
+             </div> 
+        </td></tr>
       </div>
 
       <div class="form-group"><tr><td>
         <label for="prodCategory">Product Category</label></td>
-        <td><select name="category" class="form-control" id="prodCategory" ngModel>
+        <td><select name="prodCategory" class="form-control" id="prodCategory" #prodCategory="ngModel" required ngModel>
           <option>Select Category</option>
           <option *ngFor="let c of category">{{c}}</option></select></td></tr>
       </div>
 
-      <div class="form-group form-row"><tr><td>
-        <label for="store">Available in Store</label></td>
-        <td><div class="form-check-inline">
+      <div class="form-group"><tr><td>
+         <label for="stores">Available in Stores</label>
+         <td *ngFor="let s of stores"><input type="checkbox" name="stores" #stores="ngModel" (onchange)="check(event)" required ngModel>{{s}}</td></tr>
+      </div>
+           
+          <!--<div class="form-check-inline">
              <input type="checkbox" name="store" class="form-check-input" value="Big Bazar" ngModel/>
              <label class="form-check-label">Big Bazar</label>
              </div>
@@ -71,16 +80,16 @@
           <div class="form-check-inline">
              <input type="checkbox" name="store" class="form-check-input" value="" ngModel/>
              <label class="form-check-label">Mega Store</label>
-        </div>
-        </td></tr>
-      </div>
-      <tr><td><button type="submit" class="btn btn-primary">Add Employee</button></td></tr>
+        </div>-->
+       
+      
+      <tr><td><button type="submit" class="btn btn-primary">Add Product</button></td></tr>
     
   </table>
   </form>
+  <div><p>{{msg}}</p><br><p>{{prodForm.value|json}}</p></div>
   
-   </div>
- </div>
+ 
   
   
  
